--- a/src/partials/search/search.html
+++ b/src/partials/search/search.html
@@ -1,10 +1,10 @@
 <div id="search">
 
 	 
-	<div class="greeting-container">
+	<!-- <div class="greeting-container">
 		<h3>Hello {{ search.userName }}!</h3>
 		<button class="btn btn-default" ng-click="search.updateAPIInfo()">Update Info</button> 
-	</div>
+	</div> -->
 	
 
 	<div ui-view="bar" id="bar"></div>
