--- a/src/partials/playlist/playlist-partials/modals/storage-settings-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/storage-settings-modal.html
@@ -1,11 +1,11 @@
 <form ng-submit="storageSettingsModal.ok(storageSettingsModal.warnVal, storageSettingsModal.fBaseDB)">
     <div class="modal-body modal-body-saved-search">
         <h2>Other Settings</h2>
-        <section>
+       <!--  <section>
             <p>This app utilizes Google Firebase, and by default, you'd be using the developer's own personal database.</p>
             <label>Use my own database:</label>
             <input type="text" class="form-control text-settings-modal" placeholder="weeping-willow-456">
-        </section>
+        </section> -->
         <section>
             <label for="warnActive">Warn me before permanently removing items:</label>
             <input name="warnActive" ng-model="storageSettingsModal.warnVal" type="checkbox" class="checkbox-settings-modal">
