--- a/src/partials/playlist/playlist.html
+++ b/src/partials/playlist/playlist.html
@@ -3,6 +3,7 @@
 	<!-- Saved Videos Section -->
 	<div class="playlist-section-options">
 		<p ng-if="playlist.isUsingFBase && playlist.segName">Using the <span class="emph">{{ playlist.segName }}</span> segment.</p>
+		<p ng-if="!playlist.segName">Using <span class="emph">Local Storage</span></p>
 		<button class="btn btn-default btn-storage" ng-if="playlist.isUsingFBase" ng-click="playlist.fbaseSave()">
 			<span ng-if="!playlist.segName">Connect to Firebase</span>
 			<span ng-if="playlist.segName">Disconnect from Firebase</span>
