Updated bugs/issues in readme/about, updated UI in storage settings modal - user helped if incorrect pw

--- a/src/partials/about/about.html
+++ b/src/partials/about/about.html
@@ -22,6 +22,7 @@
 	<div class="about-other">
 	<h2>Known Bugs/Issues</h2>
 	<ul>
+		<li>It is recommended that you Disconnect from Firebase before changing Firebase databases within the code. If for some reason you forget, you should immediately Disconnect from Firebase since it may cause conflicts with the database you end up switching to.</li>
 		<li>Map sometimes doesn't expand as it should. Simply refreshing the page should solve this.</li>
 		<li>Sometimes issues occur when fetching saved searches/videos, and you may not see any of your saved content. Simply refreshing the page should solve this.</li>
 		<li>This app works best in Google Chrome. I continue to add fixes to any cross-browser issues I may come across.</li>
