--- a/src/partials/playlist/playlist-partials/modals/init-firebase-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/init-firebase-modal.html
@@ -12,7 +12,7 @@
         <div class="row">
         	<input ng-model="initFirebaseModal.obj.password" type="password" class="form-control search-modal-input" placeholder="XXXXXX" required>
         </div>
-        <p ng-if="initFirebaseModal.pwError">Error: Password doesn't match id!</p>
+        <p ng-if="initFirebaseModal.pwError">Error: Password doesn't match id! You can find all of your saved data (including passwords for any of your created segments) at https://console.firebase.google.com/project/INSERT-YOUR-DATABASE-NAME-HERE/database/data.</p>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="submit">OK</button>
