Updated about, readme

--- a/src/partials/about/about.html
+++ b/src/partials/about/about.html
@@ -7,7 +7,7 @@
 	<div id="about-guide">
 		<h2>Guide</h2>
 		<p>You can simply do a basic video search via the default search bar. Note that there are more search parameters and filters that you can use to make a much finer search.</p>
-		<p>Currently, you can search by location, result order, safe search settings, date range (from, to), and also by a particular channel filter.</p>
+		<p>Currently, you can search by location, result order, date range, and also by a particular channel.</p>
 		<p>The location parameter uses Google Maps to allow the user to select a portion of the map using an adjustable circular selector. <span class="bold emph">Due to the limits of the API, radii of selections cannot exceed 1000 kilometers.</span> You can clear the selection by clicking the "Clear Selection" button. The coordinates of the center of the circle and its radius are displayed to the left and right of the "Clear Selection" button, respectively. </p>
 		<p>If, for example, you want to search the contents of a specific channel, here's what you do:</p>
 		<ol>
