--- a/src/partials/playlist/playlist-partials/modals/init-firebase-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/init-firebase-modal.html
@@ -3,7 +3,7 @@
 <form ng-submit="initFirebaseModal.ok(initFirebaseModal.obj)" ng-if="!initFirebaseModal.isLoggedIn">
     <div class="modal-body modal-body-saved-search">
         <h2>New User?</h2>
-        <p>Create a unique id and password to create a new database segment.</p>
+        <p>Please provide a unique id and password to create a new account.</p>
         <h2>Returning User?</h2>
         <p>Please enter your correct id and password.</p>
         <div class="row">
@@ -12,7 +12,7 @@
         <div class="row">
         	<input ng-model="initFirebaseModal.obj.password" type="password" class="form-control search-modal-input" placeholder="XXXXXX" required>
         </div>
-        <p ng-if="initFirebaseModal.pwError">Error: Password doesn't match id! You can find all of your saved data (including passwords for any of your created segments) at https://console.firebase.google.com/project/INSERT-YOUR-DATABASE-NAME-HERE/database/data.</p>
+        <p ng-if="initFirebaseModal.pwError">Error: Password doesn't match id! You can find all of your saved data (including passwords for any of your accounts) at https://console.firebase.google.com/project/INSERT-YOUR-DATABASE-NAME-HERE/database/data.</p>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="submit">OK</button>
@@ -24,7 +24,7 @@
 <form ng-submit="initFirebaseModal.logout()" ng-if="initFirebaseModal.isLoggedIn">
 	<div class="modal-body">
 		<h2>Hello!</h2>
-        <p>You are currently connected to the <span class="bold">{{ initFirebaseModal.credObj.username }}</span>  segment.</p>
+        <p>You are currently logged in as <span class="bold">{{ initFirebaseModal.credObj.username }}</span>.</p>
 	</div>
 	<div class="modal-footer">
         <button autofocus class="btn btn-primary" type="submit">Log Out</button>
