--- a/src/partials/playlist/playlist-partials/modals/new-seg-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/new-seg-modal.html
@@ -1,7 +1,7 @@
 <form ng-submit="alertModal.ok()">
 	<div class="modal-body">
 		<!-- <h2></h2> -->
-	    <p>You have just created a new segment.</p>
+	    <p>You have just created a new account.</p>
 	</div>
 	<div class="modal-footer">
 	    <button autofocus class="btn btn-primary" type="submit">OK</button>
