--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1,6 +1,8 @@
 // State Changes
 #animate-view-container { 
 	position:relative;
+	max-width: 1200px;
+	margin: auto;
 	.animate-view {
 	    transition:500ms linear all;
 	    position:absolute;
