--- a/src/partials/search/search-partials/bar.html
+++ b/src/partials/search/search-partials/bar.html
@@ -86,7 +86,7 @@
 				<input class="btn btn-default" type="button" ng-click="search.chanClear()" value="Clear">
 			</div>
 			<div id="save-search-wrapper">
-				<input class="btn btn-primary" ng-click="search.saveSearch(search.params)" type="button" value="Save Search">
+				<input class="btn btn-primary" id="btn-save-search" ng-click="search.saveSearch(search.params)" type="button" value="Save Search">
 			</div>
 			<div class="row btn-reset-container">
 				<div class="col-md-12">
