Search: result order toggle span is now button for accessibility. Created btn-no-style class to avoid repetition.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -604,7 +604,7 @@ body #page-header #header-wrapper #credit {
 .scroll-top, .btn-change-page-inner {
   transition: all 0.5s ease-in-out; }
 
-.btn-change-page, .btn-channel-filter {
+.btn-no-style {
   -webkit-appearance: none;
   -moz-appearance: none;
   background: transparent;
