Search error modal: updated content.

--- a/src/partials/search/search-partials/modals/error-modal.html
+++ b/src/partials/search/search-partials/modals/error-modal.html
@@ -2,8 +2,8 @@
 	<div class="modal-body">
 	    <h2>Sorry, an error occurred.</h2>
 	    <ul>
-	    	<li>Are your API keys valid?</li>
-	    	<li>Have you run over your API request limits?</li>
+			<li>If you're filtering by location, note that the selection radius is limited to 1000 kilometers.</li>
+			<li>Otherwise, please consider revisiting the app later as the server may be having some issues.</li>
 	    </ul>
 	</div>
 	<div class="modal-footer">
