--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,10 +13,12 @@ $desktop: 'min-width: 1024px';
 $mobilefix: 'max-width: 768px';
 
 
-//Colors
+// Colors
 $buttontext: #777;
 $hoveredtext: #333;
 $border-grey: #E7E7E7;
 $bg-grey: #F8F8F8;
 $link: #2574A9;
+
+$my-img-box-shadow: 1px 1px 3px black;
 
