--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -293,13 +293,30 @@ body #page-header #header-wrapper #credit {
 .button-wrapper {
   margin: 1em; }
 
+#map-wrapper {
+  position: relative;
+  margin-bottom: 4em; }
+
 #map {
   width: 100%;
   height: 15em;
   display: block; }
 
+#map-hud * {
+  position: absolute; }
+
 #map-hud div {
   text-align: center; }
+
+#map-hud .btn-clear-select {
+  right: 50%;
+  transform: translateX(50%); }
+
+#map-hud .map-lat-long {
+  left: 5%; }
+
+#map-hud .map-radius {
+  right: 5%; }
 
 #map-hud span {
   font-size: 0.7em; }
