--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -295,31 +295,36 @@ body #page-header #header-wrapper #credit {
 
 #map-wrapper {
   position: relative;
-  margin-bottom: 4em; }
+  margin-bottom: 6em; }
 
 #map {
   width: 100%;
   height: 15em;
   display: block; }
 
-#map-hud * {
-  position: absolute; }
-
-#map-hud div {
-  text-align: center; }
-
-#map-hud .btn-clear-select {
-  right: 50%;
-  transform: translateX(50%); }
-
-#map-hud .map-lat-long {
-  left: 5%; }
-
-#map-hud .map-radius {
-  right: 5%; }
-
-#map-hud span {
-  font-size: 0.7em; }
+#map-hud {
+  transition: 500ms linear all; }
+  #map-hud * {
+    position: absolute;
+    margin: 1em 0;
+    padding: 0.5em; }
+  #map-hud div {
+    text-align: center; }
+  #map-hud .btn-clear-select {
+    right: 50%;
+    transform: translateX(50%);
+    margin: 1em auto; }
+  #map-hud .map-lat-long {
+    left: 5%; }
+  #map-hud .map-radius {
+    transition: 500ms linear all;
+    right: 5%;
+    border-radius: 4px; }
+    #map-hud .map-radius.radius-error {
+      background-color: #ffcfcf;
+      color: #E74C3C; }
+  #map-hud span {
+    font-size: 0.7em; }
 
 .hidden {
   display: none; }
@@ -363,7 +368,7 @@ body #page-header #header-wrapper #credit {
     margin: 1em; }
   #advanced-search #video-search-wrapper {
     margin-bottom: 1em; }
-  #advanced-search .btn-clear-select, #advanced-search .btn-toggle-map {
+  #advanced-search .btn-toggle-map {
     margin: 0 0 1em 0; }
 
 .channel-filter {
@@ -478,7 +483,7 @@ body #page-header #header-wrapper #credit {
   width: 10%;
   margin: 0 auto; }
 
-@media screen and (min-width: 350px) {
+@media screen and (min-width: 403px) {
   #map-hud span {
     font-size: 1em; }
   .results #page-selector #prev-page, .results #page-selector #next-page {
@@ -730,6 +735,20 @@ body #page-header #header-wrapper #credit {
   z-index: 99; }
 
 .animate-view.ng-leave.ng-leave-active {
+  opacity: 0; }
+
+#map-hud.ng-enter {
+  opacity: 0;
+  z-index: 100; }
+
+#map-hud.ng-enter.ng-enter-active {
+  opacity: 1; }
+
+#map-hud.ng-leave {
+  opacity: 1;
+  z-index: 99; }
+
+#map-hud.ng-leave.ng-leave-active {
   opacity: 0; }
 
 .scroll-top.ng-enter {
