--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -18,6 +18,12 @@
 .animate-view.ng-leave { opacity:1; z-index:99; }
 .animate-view.ng-leave.ng-leave-active { opacity:0; }
 
+// Map Hud
+#map-hud.ng-enter { opacity:0; z-index:100; }
+#map-hud.ng-enter.ng-enter-active { opacity:1; }
+#map-hud.ng-leave { opacity:1; z-index:99; }
+#map-hud.ng-leave.ng-leave-active { opacity:0; }
+
 // Scroll Button
 .scroll-top.ng-enter { opacity:0; }
 .scroll-top.ng-enter-active { opacity:1; }
