--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -13,16 +13,26 @@
 	}
 }
 
-.animate-view.ng-enter { opacity:0; z-index:100; }
-.animate-view.ng-enter.ng-enter-active { opacity:1; }
-.animate-view.ng-leave { opacity:1; z-index:99; }
-.animate-view.ng-leave.ng-leave-active { opacity:0; }
+// .animate-view.ng-enter { opacity:0; z-index:100; }
+// .animate-view.ng-enter.ng-enter-active { opacity:1; }
+// .animate-view.ng-leave { opacity:1; z-index:99; }
+// .animate-view.ng-leave.ng-leave-active { opacity:0; }
 
 // Map Hud
-#map-hud.ng-enter { opacity:0; z-index:100; }
-#map-hud.ng-enter.ng-enter-active { opacity:1; }
-#map-hud.ng-leave { opacity:1; z-index:99; }
-#map-hud.ng-leave.ng-leave-active { opacity:0; }
+// #map-hud.ng-enter { opacity:0; z-index:100; }
+// #map-hud.ng-enter.ng-enter-active { opacity:1; }
+// #map-hud.ng-leave { opacity:1; z-index:99; }
+// #map-hud.ng-leave.ng-leave-active { opacity:0; }
+
+// Fade Animations (Absolute positioned elements)
+.animate-view,
+#map-hud,
+.map-msg-radius-error {
+	&.ng-enter { opacity:0; z-index:100; }
+	&.ng-enter.ng-enter-active { opacity:1; }
+	&.ng-leave { opacity:1; z-index:99; }
+	&.ng-leave.ng-leave-active { opacity:0; }
+}
 
 // Scroll Button
 .scroll-top.ng-enter { opacity:0; }
