--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,9 @@
+/*----------------------------------------------------------- 
+  Media Queries
+*/
+/*----------------------------------------------------------- 
+  Colors
+*/
 html, body, #container-main {
   width: 100%;
   height: 100%;
@@ -400,7 +406,7 @@ body #page-header #header-wrapper #credit {
   .results .result-desktop {
     display: none; }
   .results .inner-result {
-    background-color: #ececec;
+    background-color: #F8F8F8;
     box-shadow: 0px 1px 3px 0px;
     border-color: rgba(0, 0, 0, 0.58);
     border-width: 1px 2px 0 2px; }
