--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,6 @@
-// Media Queries
+/*----------------------------------------------------------- 
+  Media Queries
+*/
 $mobile1: 'max-width: 300px';
 $mobile2: 'min-width: 320px';
 $mobile3: 'min-width: 350px';
@@ -12,13 +14,24 @@ $results-tweakpoint: 'min-width: 994px';
 $desktop: 'min-width: 1024px';
 $mobilefix: 'max-width: 768px';
 
-
-// Colors
+/*----------------------------------------------------------- 
+  Colors
+*/
 $buttontext: #777;
 $hoveredtext: #333;
 $border-grey: #E7E7E7;
 $bg-grey: #F8F8F8;
+
+// Not using, result bg currently uses bg-grey. TODO remove?
+$video-result-bg-grey: #ececec;
+
 $link: #2574A9;
+
+$error-red-light: #ffcfcf;
+$error-red: #E74C3C;
+
+// Used in bottom nav section in search view
+$my-green: rgba(39, 174, 96, 0.7); 
 
 $my-img-box-shadow: 1px 1px 3px black;
 
