--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -40,9 +40,7 @@
 }
 
 #map-hud {
-	// position: absolute;
 	transition:500ms linear all;
-	// height: 4em;
 	* {
 		position: absolute;
 		margin: 1em 0;
@@ -66,7 +64,6 @@
 	.map-radius,
 	.map-msg-radius-error {
 		transition:500ms linear all;
-		// right: 5%;
 	}
 
 	.map-radius {
@@ -75,15 +72,17 @@
 		border-radius: 4px;
 
 		&.radius-error {
-			background-color: $error-red-light;
 			color: $error-red;
 		}
 	}
 
 	.map-msg-radius-error {
-		color: $error-red;
 		transform: translateY(2em);
-    right: 3%;
+		right: 0;
+		background: white;
+    border: 1px solid $border-grey;
+		font-weight: bold;
+		color: $error-red;
 	}
 
 	span {
@@ -188,7 +187,6 @@
 		display: none;
 	}
 	.inner-result {
-		// background-color: rgb(236, 236, 236);
 		background-color: $bg-grey;
 		box-shadow: 0px 1px 3px 0px;
 		border-color: rgba(0, 0, 0, 0.58);
@@ -212,7 +210,6 @@
 		}
 		p {
 			overflow-x: scroll;
-			// color: rgba(0, 0, 0, 1);
 			color: black;
 		}
 		h3 {
